--- a/ReportApp_Android/app/src/main/res/layout/item_report_content.xml
+++ b/ReportApp_Android/app/src/main/res/layout/item_report_content.xml
@@ -33,7 +33,7 @@
 
         <LinearLayout
             android:id="@+id/layoutLine"
-            android:layout_width="6dp"
+            android:layout_width="4dp"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_marginTop="-2dp"
@@ -71,6 +71,7 @@
         </com.google.android.material.card.MaterialCardView>
         
         <HorizontalScrollView
+            android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:scrollbars="none"
             android:layout_width="match_parent"
