--- a/ReportApp_Android/app/src/main/res/layout/fragment_low_task.xml
+++ b/ReportApp_Android/app/src/main/res/layout/fragment_low_task.xml
@@ -46,6 +46,8 @@
         <ListView
             android:id="@+id/listView"
             android:layout_width="match_parent"
+            android:layout_marginHorizontal="24dp"
+            android:divider="@android:color/transparent"
             android:layout_height="match_parent"
             android:layout_marginBottom="12dp"
             android:layout_weight="1"
