--- a/ReportApp_Android/app/src/main/res/layout/fragment_low_task.xml
+++ b/ReportApp_Android/app/src/main/res/layout/fragment_low_task.xml
@@ -44,6 +44,7 @@
         app:layout_constraintTop_toBottomOf="@+id/rbGroup">
 
         <ListView
+            android:visibility="gone"
             android:id="@+id/listView"
             android:layout_width="match_parent"
             android:layout_marginHorizontal="24dp"
@@ -52,6 +53,31 @@
             android:layout_marginBottom="12dp"
             android:layout_weight="1"
             android:scrollbars="none" />
+
+        <LinearLayout
+            android:id="@+id/layoutNotReport"
+            android:layout_width="match_parent"
+            android:layout_margin="32dp"
+            android:orientation="vertical"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center">
+            <ImageView
+                android:layout_weight="1"
+                android:adjustViewBounds="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/img_empty" />
+
+            <TextView
+                android:layout_marginTop="20dp"
+                android:layout_width="wrap_content"
+                android:textSize="18sp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="No one report task"/>
+        </LinearLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
@@ -75,6 +101,7 @@
             android:text="Confirm" />
 
         <TextView
+            android:id="@+id/txtLastUpdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
